fix for overflow-x on reference

--- a/reference/style.css
+++ b/reference/style.css
@@ -29,6 +29,7 @@ body, td {
     font-weight: 300;
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden;
 }
 
 b {
